css/myfood.scss
@mixin menu-background($name) {
	background-image: url("../img/#{$name}.svg");
	background-repeat: no-repeat;
	background-size: 55% 60%;
}

@mixin gradient($top, $bottom) {
	background: $top; /* Old browsers */
	background: -moz-linear-gradient(top, $top 0%, $bottom 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$top), color-stop(100%,$bottom)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top, $top 0%,$bottom 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top, $top 0%,$bottom 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top, $top 0%,$bottom 100%); /* IE10+ */
	background: linear-gradient(to bottom, $top 0%,$bottom 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$top}', endColorstr='#{$bottom}',GradientType=0 ); /* IE6-9 */
}

@mixin border-radius($corner) {
	-webkit-border-radius: $corner;
	border-radius: $corner;
}

@mixin box-shadow($color) {
	-moz-box-shadow:inset 0px 1px 0px 0px $color;
	-webkit-box-shadow:inset 0px 1px 0px 0px $color;
	box-shadow:inset 0px 1px 0px 0px $color;
}



* {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

body {
	height: 100%;
	overflow: hidden;
}

div[data-role="footer"] {
	display: none;
}

div[data-role="page"] .ui-panel-content-wrap {
	height: 100%;
}

.slide-menu {
	position: fixed;
}

.inFridge {
	@include gradient(#def2c1, #d3f7aa);
}

.inGrocery {
	@include gradient(#f2eecd, #f2ecb0);
}

.missing {
	@include gradient(#ffeaea, #ffd8d8);
}

.ui-icon-checkbox-off {
	background-color: #EEE;
}

/* Styles for menu */

.ui-panel-inner {
	padding: 0;
}

.slide-menu {
	position: fixed;
	background: #444;
}

.slide-menu .link {
	position: relative;
	margin: 20px;
	padding: 10px;
	cursor: pointer;
	color: #EEE;
	background-color: #333;
	@include border-radius(10px);
	border: 1px solid rgba(0,0,0,0.3);
	-webkit-box-shadow: inset -1px -1px 0 rgba(255,255,255,0.15),inset 1px 1px 0 rgba(255,255,255,0.15);
	box-shadow: inset -1px -1px 0 rgba(255,255,255,0.15),inset 1px 1px 0 rgba(255,255,255,0.15);    
	text-align: center;
	text-shadow: 1px 1px 1px #777;
	 filter: dropshadow(color=#777, offx=1, offy=1);
}

.link span {
	position: relative;
}

.link.fridge {
	@include menu-background("eggs");
	background-size: 60% 80%;
	background-position: 50% 50%;
}

.link.grocery {
	@include menu-background("cart");
	background-position: 50% 45%;
}

.link.planner {
	@include menu-background("calendar");
	background-position: 52.5% 40%;
}

.link.recipes {
	@include menu-background("pot");
	background-position: 50% 40%;
}

div.link.noBgImg {
	background-image: none;
}

input[type="checkbox"] {
	display: none;
}

/* Auto complete */
.ui-autocomplete {
	font-family: Arial, sans-serif;
	font-size: 16px;
}

/* "Details" button for recipes */
.details {
	position: absolute;
	top: 0px;
	right: 0px;
}

#planner, #recipes {
	.ui-controlgroup-controls > .ui-checkbox:first-child .details.ui-btn-corner-all {
		-webkit-border-radius: 0 10px 0 0;
		border-radius: 0 10px 0 0;
		.ui-btn-inner {
			-webkit-border-radius: 0 10px 0 0;
			border-radius: 0 10px 0 0;
		}
	}

	.ui-controlgroup-controls > .ui-checkbox:last-child {
		.listItem {
			-webkit-border-radius: 0 0 10px 10px;
			border-radius: 0 0 10px 10px;
			border-bottom-width: 1px;
		}
		.details.ui-btn-corner-all {
			-webkit-border-radius: 0 0 10px 0;
			border-radius: 0 0 10px 0;
			.ui-btn-inner {
				-webkit-border-radius: 0 0 10px 0;
				border-radius: 0 0 10px 0;
			}
		}
	}
}

/* Adjustments for left panel width */

$left-panel-width: 175px;
 
.ui-panel {
	width: $left-panel-width;
}
 
.ui-panel.ui-panel-closed {
	width: 0;
}
 
.ui-panel-position-left {
	left: -$left-panel-width;
}
 
.ui-panel-animate.ui-panel-position-left.ui-panel-display-overlay, .ui-panel-animate.ui-panel-position-left.ui-panel-display-push {
	-webkit-transform: translate3d(-$left-panel-width, 0, 0);
	-moz-transform: translate3d(-$left-panel-width, 0, 0);
	transform: translate3d(-$left-panel-width, 0, 0)
}
 
.ui-panel-content-fixed-toolbar-position-left.ui-panel-content-fixed-toolbar-open, .ui-panel-content-wrap-position-left.ui-panel-content-wrap-open, .ui-panel-dismiss-position-left.ui-panel-dismiss-open {
	left: $left-panel-width;
}
 
.ui-panel-animate.ui-panel-content-fixed-toolbar-position-left.ui-panel-content-fixed-toolbar-open.ui-panel-content-fixed-toolbar-display-reveal, .ui-panel-animate.ui-panel-content-fixed-toolbar-position-left.ui-panel-content-fixed-toolbar-open.ui-panel-content-fixed-toolbar-display-push, .ui-panel-animate.ui-panel-content-wrap-position-left.ui-panel-content-wrap-open.ui-panel-content-wrap-display-reveal, .ui-panel-animate.ui-panel-content-wrap-position-left.ui-panel-content-wrap-open.ui-panel-content-wrap-display-push {
	-webkit-transform: translate3d($left-panel-width, 0, 0);
	-moz-transform: translate3d($left-panel-width, 0, 0);
	transform: translate3d($left-panel-width, 0, 0)
}
 
.ui-panel-content-fixed-toolbar-position-right.ui-panel-content-fixed-toolbar-open, .ui-panel-content-wrap-position-right.ui-panel-content-wrap-open, .ui-panel-dismiss-position-right.ui-panel-dismiss-open {
	left: -$left-panel-width;
}
 
@media (min-width:55em) {
 
	.ui-responsive-panel.ui-page-panel-open .ui-panel-content-fixed-toolbar-display-push.ui-panel-content-fixed-toolbar-position-right, .ui-responsive-panel.ui-page-panel-open .ui-panel-content-fixed-toolbar-display-reveal.ui-panel-content-fixed-toolbar-position-right, .ui-responsive-panel.ui-page-panel-open .ui-panel-content-wrap-display-push.ui-panel-content-wrap-position-right, .ui-responsive-panel.ui-page-panel-open .ui-panel-content-wrap-display-reveal.ui-panel-content-wrap-position-right {
		margin-left: $left-panel-width
	}
}

